Update .env with new MongoDB URI and amount limits
Updated MongoDB URI to use SRV connection string and added minimum and maximum amount variables.

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 BOT_TOKEN=7749312938:AAHt2Q3FSPvjX_bZRZO_sLfV9BcQpO_6f3g
 RAZORPAY_KEY_ID=rzp_test_YourKeyId
 RAZORPAY_KEY_SECRET=YourKeySecret
-MONGODB_URI=mongodb://localhost:27017
+MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/payment_bot
 DATABASE_NAME=payment_bot
+MIN_AMOUNT=1
+MAX_AMOUNT=100000
