--- a/render.yaml
+++ b/render.yaml
@@ -5,13 +5,14 @@ services:
     region: singapore
     plan: free
     buildCommand: |
+      echo "Python version:"
       python --version
       pip install --upgrade pip setuptools wheel
       pip install -r requirements.txt
     startCommand: python bot_webhook.py
     envVars:
       - key: PYTHON_VERSION
-        value: 3.11.9
+        value: 3.10.16
       - key: BOT_TOKEN
         sync: false
       - key: RAZORPAY_KEY_ID
@@ -19,6 +20,6 @@ services:
       - key: RAZORPAY_KEY_SECRET
         sync: false
       - key: MONGODB_URI
-        sync: false
+        value: mongodb+srv://your_username:your_password@cluster.mongodb.net/payment_bot?retryWrites=true&w=majority
       - key: DATABASE_NAME
         value: payment_bot
