--- a/render.yaml
+++ b/render.yaml
@@ -5,21 +5,12 @@ services:
     region: singapore
     plan: free
     buildCommand: |
-      echo "Python version:"
+      echo "=== Python Version ==="
       python --version
+      echo "=== Installing Dependencies ==="
       pip install --upgrade pip setuptools wheel
-      pip install -r requirements.txt
+      pip install --no-cache-dir -r requirements.txt
     startCommand: python bot_webhook.py
     envVars:
       - key: PYTHON_VERSION
-        value: 3.10.16
-      - key: BOT_TOKEN
-        sync: false
-      - key: RAZORPAY_KEY_ID
-        sync: false
-      - key: RAZORPAY_KEY_SECRET
-        sync: false
-      - key: MONGODB_URI
-        value: mongodb+srv://your_username:your_password@cluster.mongodb.net/payment_bot?retryWrites=true&w=majority
-      - key: DATABASE_NAME
-        value: payment_bot
+        value: 3.11.9
